[gd_scene load_steps=6 format=3 uid="uid://ds23emrqlb05u"]

[ext_resource type="Script" path="res://current/menus/chat_menus/multiplayer_menu/multiplayer_menu.gd" id="1_j81e8"]
[ext_resource type="Texture2D" uid="uid://dv4n5etipadpk" path="res://current/assets/ui/btn_sized.png" id="2_8p1pj"]
[ext_resource type="Script" uid="uid://bhyb47b27e03q" path="res://current/scripts/node/rich_text_label.gd" id="2_plucq"]
[ext_resource type="Script" path="res://current/menus/chat_menus/multiplayer_menu/lobbies_list.gd" id="4_3onyp"]
[ext_resource type="Texture2D" uid="uid://dws4hl3nqf84c" path="res://current/assets/ui/settingMono.png" id="5_mc3xq"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j81e8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 64.0
offset_right = 1600.0
offset_bottom = 1024.0
color = Color(0.647059, 0.533333, 0.780392, 0.588235)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 384.0
offset_top = 128.0
offset_right = 1536.0
offset_bottom = 960.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button Text" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateLobbyText" type="RichTextLabel" parent="ScrollContainer/HBoxContainer/Button Text"]
layout_mode = 2
size_flags_vertical = 3
text = "Create a lobby"
fit_content = true
script = ExtResource("2_plucq")

[node name="RefreshLobbiesText" type="RichTextLabel" parent="ScrollContainer/HBoxContainer/Button Text"]
layout_mode = 2
size_flags_vertical = 3
text = "Refresh Lobbies"
script = ExtResource("2_plucq")

[node name="SendTestDataText" type="RichTextLabel" parent="ScrollContainer/HBoxContainer/Button Text"]
layout_mode = 2
size_flags_vertical = 3
text = "Ping Lobbies"
fit_content = true
script = ExtResource("2_plucq")

[node name="Buttons" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateLobby" type="TextureButton" parent="ScrollContainer/HBoxContainer/Buttons"]
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_8p1pj")
stretch_mode = 5

[node name="RefreshLobbies" type="TextureButton" parent="ScrollContainer/HBoxContainer/Buttons"]
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_8p1pj")
stretch_mode = 5

[node name="SendTestData" type="TextureButton" parent="ScrollContainer/HBoxContainer/Buttons"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_8p1pj")
stretch_mode = 5

[node name="LobbiesList" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("4_3onyp")

[node name="MultiplayerSettings" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 320.0
offset_top = 960.0
offset_right = 384.0
offset_bottom = 1024.0
texture_normal = ExtResource("5_mc3xq")

[connection signal="pressed" from="ScrollContainer/HBoxContainer/Buttons/CreateLobby" to="." method="_on_create_lobby_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Buttons/RefreshLobbies" to="." method="refresh_lobbies"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Buttons/SendTestData" to="." method="_on_send_test_data_btn_pressed"]
[connection signal="pressed" from="MultiplayerSettings" to="." method="_on_multiplayer_settings_pressed"]
